Fix: Sticky header was broken
Caused when I prevented horizontal scrolling on mobiles due to blur backgrounds

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -4,9 +4,12 @@
 
 @layer base {
   html {
-    @apply overflow-x-hidden;
+    @apply overflow-y-scroll;
   }
   body {
+    @apply relative;
+  }
+  main {
     @apply overflow-x-hidden;
   }
 }
